Mon Jul 13 17:30:29 1998  Nick Clifton  <nickc@cygnus.com>

	* lang-options.h: Format changed to work with --help support added
	to gcc/toplev.c

Mon Jul 13 11:54:03 1998  Craig Burley  <burley@gnu.org>

	* com.c (ffecom_push_tempvar): Replace kludge that
	munged back-end globals directly with proper calls
	to push_topmost_sequence and pop_topmost_sequence.

1998-07-12  Dave Love  <d.love@dl.ac.uk>

	* version.c: Bump version.

Sat Jul 11 19:24:32 1998  Craig Burley  <burley@gnu.org>

	Fix 980616-0.f:
	* equiv.c (ffeequiv_offset_): Don't crash on various
	possible ANY operands.

Sat Jul 11 18:24:37 1998  Craig Burley  <burley@gnu.org>

	* com.c (ffecom_expr_) [FFEBLD_opCONTER]: Die if padding
	for constant is non-zero.

	* com.c (__eprintf): Delete this function, it is obsolete.

1998-07-09  Dave Love  <d.love@dl.ac.uk>

	* intdoc.in (HOSTNM_func, HOSTNM_subr): Update last change.

Thu Jul  9 00:45:59 1998  Craig Burley  <burley@gnu.org>

	Fix debugging of CHARACTER*(*), etc., which requires
	emitting debug info on types like `ftnlen':
	* com.c (ffecom_start_progunit_): Don't bother
	resetting "invented" flag for identifier.
	(ffecom_transform_equiv_): Don't bother zeroing
	"ignored" flag for decl.
	(pushdecl): No longer set "ignored", "used", or
	"suppressed debug" flags for decls having "invented"
	identifiers.

1998-07-06  Dave Love  <d.love@dl.ac.uk>

	* intdoc.in (HOSTNM_func, HOSTNM_subr): Note possible need for
	-lsocket.

1998-07-05  Dave Love  <d.love@dl.ac.uk>

	* intdoc.in: Add entry for DATE_AND_TIME.

	* intrin.def: Add implementation for DATE_AND_TIME.  Make second
	and third args of SYSTEM_CLOCK optional.

	* com.c (ffecom_expr_intrinsic_): New case for DATE_AND_TIME.

	* com-rt.def (FFECOM_gfrtSYSTEM_CLOCK): Call G77_system_clock_0,
	not system_clock_.
	(FFECOM_gfrtDATE_AND_TIME): New DEFGFRT.

Wed Jul  1 11:19:13 1998  Craig Burley  <burley@gnu.org>

	Fix 980701-1.f (which was producing "unaligned trap"