@@ -19,7 +19,6 @@ along with GNU Fortran; see the file COPYING.  If not, write to
 the Free Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 02111-1307, USA.  */
 
-#define USE_HCONFIG
 #include "proj.h"
 #include "malloc.h"
 
